--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,12 @@
         "symfony/security-bundle": "7.3.*",
         "symfony/security-csrf": "7.3.*",
         "symfony/serializer": "7.3.*",
+        "symfony/stimulus-bundle": "^2.30",
         "symfony/string": "7.3",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/ux-live-component": "^2.30",
+        "symfony/ux-turbo": "^2.30",
+        "symfony/ux-twig-component": "^2.30",
         "symfony/validator": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.3.*"
